some more going on

--- a/index.html
+++ b/index.html
@@ -602,5 +602,12 @@
     <script src="vendor/annyang/annyang.min.js"></script>
     <script src="vendor/asd/index.js"></script>
     <script src="index.js"></script>
+    <script type="text/javascript">
+
+        var Hey = new Hey({
+          'debug':true
+        });
+        Hey.start();
+    </script>
   </body>
 </html>
