working version need to test

--- a/index.html
+++ b/index.html
@@ -603,11 +603,15 @@
     <script src="vendor/asd/index.js"></script>
     <script src="index.js"></script>
     <script type="text/javascript">
-
-        var Hey = new Hey({
-          'debug':true
-        });
-        Hey.start();
+      Hey.plug({
+        'langs': [],
+        'commands': {
+          'go': function hey() {
+            alert('goooooo');
+          }
+        }
+      });
+      Hey.start();
     </script>
   </body>
 </html>
