Lang is only 1 (by webkit-speech api default) so not selectable or configurable by the user || plugin

--- a/index.html
+++ b/index.html
@@ -604,14 +604,16 @@
     <script src="index.js"></script>
     <script type="text/javascript">
       Hey.plug({
-        'langs': [],
         'commands': {
           'go': function hey() {
             alert('goooooo');
           }
         }
       });
-      Hey.start();
+
+      Hey.start({
+        'debug':true
+      });
     </script>
   </body>
 </html>
