--- a/spec/www/index.html
+++ b/spec/www/index.html
@@ -599,12 +599,12 @@
         </a>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="../../src/js/index.js"></script>
     <script type="text/javascript">
       Hey.plug({
         'commands': {
           'go': function hey() {
-            alert('goooooo');
+            alert('go');
           }
         }
       });
