--- a/spec/www/index.html
+++ b/spec/www/index.html
@@ -6,6 +6,32 @@
   <link rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap-theme.min.css" type="text/css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="../../src/js/index.js"></script>
+  <script type="text/javascript">
+
+  window.document.addEventListener('DOMContentLoaded', function () {
+    Hey.plug({
+      'commands': {
+        'go': function hey() {
+          alert('go');
+        }
+      }
+    });
+    Hey.plug({
+      'commands': {
+        'spot': function hey() {
+          alert('spot');
+        }
+      }
+    });
+  });
+
+  window.document.addEventListener('DOMContentLoaded', function () {
+    Hey.start({
+      'debug':true
+    });
+  });
+  </script>
 </head>
 <body>
     <!-- Fixed navbar -->
@@ -599,19 +625,5 @@
         </a>
       </div>
     </div>
-    <script src="../../src/js/index.js"></script>
-    <script type="text/javascript">
-      Hey.plug({
-        'commands': {
-          'go': function hey() {
-            alert('go');
-          }
-        }
-      });
-
-      Hey.start({
-        'debug':true
-      });
-    </script>
   </body>
 </html>
