navigator which and trying keyboard triggers

--- a/spec/www/index.html
+++ b/spec/www/index.html
@@ -73,6 +73,8 @@
       <div class="jumbotron">
         <h1>TEST</h1>
         <p>This page is a simple bootstrap theme to test speakcss.js</p>
+        <input class="row" type="text"/>
+        <textarea class="row">sjsjs</textarea>
       </div>
 
 
