--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+   <meta name="description" content="Butler.js is your portable javascript I/O customizable voice driven butler. What you would have done before through the keyboard and scripts can now be done by commanding Butler by voice."/>
   <title>Butler.js ~ Yes Sir...</title>
   <link rel="stylesheet" href="bower_components/csshelper/dist/helper.min.css" type="text/css"/>
   <link rel="stylesheet" href="assets/css/extra.css" type="text/css"/>
