--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
         <h3 class="font-light">Say please: <i class="color-muted font-light">"Selector put value random"</i></h3>
         </div>
         </div>
+        <div class="fixed top layer2 right-content line-compress">
+        <a class="btn-github toggle-opacity-hover color-black font-bold" href="//github.com/720kb/butler" target="_blank">
+        <div class="separator10"></div>
+          <i class="fa fa-github-alt"></i>
+          See on Github
+          </a>
+        </div>
   </div>
   <script>
     var detectionOne
