--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-   <meta name="description" content="Butler.js is your portable javascript I/O customizable voice driven butler. What you would have done before through the keyboard and scripts can now be done by commanding Butler by voice."/>
+  <meta name="description" content="Butler.js is your portable javascript I/O customizable voice driven butler. What you would have done before through the keyboard and scripts can now be done by commanding Butler by voice."/>
   <title>Butler.js ~ Yes Sir...</title>
+  <link rel="icon" href="//getfuffa.com/favicon.ico" type="image/x-icon"/>
   <link rel="stylesheet" href="bower_components/csshelper/dist/helper.min.css" type="text/css"/>
   <link rel="stylesheet" href="assets/css/extra.css" type="text/css"/>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" type="text/css"/>
@@ -52,12 +53,17 @@
         </div>
         </div>
         <div class="fixed top layer2 right-content line-compress">
-        <a class="btn-github toggle-opacity-hover color-black font-bold" href="//github.com/720kb/butler" target="_blank">
+        <a class="btn-github toggle-opacity-hover color-black font-bold" href="//github.com/720kb/butler" target="_blankgit ">
         <div class="separator10"></div>
           <i class="fa fa-github-alt"></i>
           See on Github
           </a>
         </div>
+        <div class="separator100"></div>
+        <small class="line center-content color-muted font-x-small">
+
+         <a class="color-black toggle-opacity-hover" href="//720kb.net">720kb</a>
+       </small>
   </div>
   <script>
     var detectionOne
