--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div class="separator5"></div>
   Can you repeat Sir ?
   </div>
+  <div class="separator50"></div>
   <div class="line header center-content">
     <img src="assets/img/butlerjs.png"/>
   </div>
@@ -52,7 +53,8 @@
         <h3 class="font-light">Say please: <i class="color-muted font-light">"Selector put value random"</i></h3>
         </div>
         </div>
-        <div class="fixed top layer2 right-content line-compress">
+        <div class="fixed top layer2 right-content line-compress mobile-center-content">
+          <div class="separator5 tablet mobile"></div>
         <a class="btn-github toggle-opacity-hover color-black font-bold" href="//github.com/720kb/butler" target="_blankgit ">
         <div class="separator10"></div>
           <i class="fa fa-github-alt"></i>
