--- a/spec/www/index.html
+++ b/spec/www/index.html
@@ -7,25 +7,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="../../src/js/index.js"></script>
+  <script src="../../src/js/i18n/butler.it_IT.js"></script>
   <script type="text/javascript">
-  window.document.addEventListener('DOMContentLoaded', function () {
-    Butler.plug({
-      'commands': {
-        'go': function hey() {
-          Butler.Highlighter.next();
-          console.log('antani', Butler.Highlighter.element);
-        }
-      }
-    });
-    Butler.plug({
-      'commands': {
-        'spot': function hey() {
-          alert('spot');
-        }
-      }
-    });
-  });
-
   window.document.addEventListener('DOMContentLoaded', function () {
     Butler.start({
       'debug':true
