--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Cache-control" content="no-cache">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <meta name="description" content="Butler.js is your portable javascript I/O customizable voice driven butler. What you would have done before through the keyboard and scripts can now be done by commanding Butler by voice."/>
   <title>Butler.js ~ Yes Sir...</title>
