png to svg for logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <div class="separator50"></div>
   <div class="line header center-content">
-    <img src="assets/img/butlerjs.png"/>
+    <img src="assets/img/logo.svg"/>
   </div>
   <div class="separator5"></div>
   <div class="line center-content">
